Change agent spec; Add Python SDK [WIP]
