# agent/openapi.yml
@@ -5,143 +5,91 @@ info:
   version: 'v1'
 
 paths:
-  /state:
-    get:
-      summary: Get the state of the agent.
-      operationId: getAgentState
-      tags: [state]
-      responses:
-        200:
-          description: Successfuly retrieved the state of the agent.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AgentState'
-        default:
-          description: Internal Server Error
-    put:
-      summary: Synchronously set the state of the agent.
-      operationId: setAgentState
-      tags: [state]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AgentState'
-      responses:
-        204:
-          description: The update was successful
-        default:
-          description: Internal Server Error
-
-# Maybe could be a "jobs", "tasks" instead of "actions"?
-  /actions:
+  /tasks:
     post:
-      summary: Creates a new action for the agent to execute.
-      tags: [actions]
-      operationId: createAgentAction
+      summary: Creates a new task for the agent to execute.
+      tags: [tasks]
+      operationId: createAgentTask
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AgentAction'
+              $ref: '#/components/schemas/AgentTask'
       responses:
         204:
           description: The update was successful
         default:
           description: Internal Server Error
     get:
-      summary: List all actions that have been created for the agent.
-      tags: [actions]
-      operationId: listAgentActions
+      summary: List all tasks that have been created for the agent.
+      tags: [tasks]
+      operationId: listAgentTasks
       responses:
         200:
-          description: Successfuly listed agent actions
+          description: Successfuly listed agent tasks
           content:
             application/json:
               schema:
                 type: array
-                description: List of actions IDs
+                description: List of tasks IDs
                 items:
-                  type: string
-                  description: Action ID
+                  $ref: '#/components/schemas/AgentTask'
         default:
           description: Internal Server Error
 
-  /actions/{action_id}:
-    get:
-      summary: Get information about a specific action.
-      tags: [actions]
-      operationId: getAgentAction
+  /tasks/{task_id}/step:
+    post:
+      summary: Execute step in the specified task.
+      tags: [tasks]
+      operationId: postAgentTaskStep
       parameters:
-        - name: action_id
+        - name: task_id
           in: path
-          description: ID of the action
+          description: ID of the task
           required: true
           schema:
             type: string
       responses:
         200:
-          description: The update was successful
+          description: The step was successful
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AgentActionInfo'
+                $ref: '#/components/schemas/AgentStepResult'
         default:
           description: Internal Server Error
 
 components:
   schemas:
-    AgentState:
+    AgentTaskInput:
+      description: Input parameters for the task. This can be any JSON serializable object.
       type: object
-      description:
-        Variant wrapper containing the state.
-      required:
-        - state_type
-      properties:
-        state_type:
-          description: Enumeration indicating what state is contained in the payload
-          type: string
-          enum:
-            - AgentStart
-            - AgentStop
 
-    AgentAction:
+    AgentTask:
       type: object
-      description:
-        Variant wrapper containing the real action.
+      description: Wrapper containing the task.
       properties:
-        action_id:
-          description: The ID of the action you want to react to (optional)
+        task_id:
+          description: The ID of the task.
           type: string
-        type:
-          description: Type of the action you want to create
-          type: string 
         input:
-          description: Input parameters for the action
-          type: object
+          $ref: "#/components/schemas/AgentTaskInput"
 
-    AgentActionInfo:
+    AgentStepDeliverables:
+      description: Deliverables that the task has produced.
+      type: object
+
+    AgentStepOutput:
+      description: Output of the task. This can be any JSON serializable object.
+      type: object
+
+    AgentStepResult:
       allOf:
-        - $ref: '#/components/schemas/AgentAction'
+        - $ref: '#/components/schemas/AgentTask'
         - type: object
-          required:
-            - state
           properties:
             output:
-              description: Output of the action
-              type: object
+              $ref: "#/components/schemas/AgentStepOutput"
             deliverables:
-              description: List of deliverables that the action has produced
-              type: object
-            state:
-              description: The current state of the action
-              type: string
-              enum:
-                - Pending
-                - Running
-                - Completed
-                - Failed
-                - Cancelled
+              $ref: "#/components/schemas/AgentStepDeliverables"
