# agent/python/e2b_agent/models.py
@@ -1,49 +1,31 @@
 # generated by fastapi-codegen:
 #   filename:  ../openapi.yml
-#   timestamp: 2023-07-13T03:26:56+00:00
+#   timestamp: 2023-07-13T15:24:06+00:00
 
 from __future__ import annotations
 
-from enum import Enum
-from typing import Any, Dict, Optional
+from typing import Optional
 
 from pydantic import BaseModel, Field
 
 
-class StateType(Enum):
-    AgentStart = 'AgentStart'
-    AgentStop = 'AgentStop'
+class AgentTaskInput(BaseModel):
+    pass
 
 
-class AgentState(BaseModel):
-    state_type: StateType = Field(
-        ..., description='Enumeration indicating what state is contained in the payload'
-    )
+class AgentTask(BaseModel):
+    task_id: Optional[str] = Field(None, description='The ID of the task.')
+    input: Optional[AgentTaskInput] = None
 
 
-class AgentAction(BaseModel):
-    action_id: Optional[str] = Field(
-        None, description='The ID of the action you want to react to (optional)'
-    )
-    type: Optional[str] = Field(
-        None, description='Type of the action you want to create'
-    )
-    input: Optional[Dict[str, Any]] = Field(
-        None, description='Input parameters for the action'
-    )
+class AgentStepDeliverables(BaseModel):
+    pass
 
 
-class State(Enum):
-    Pending = 'Pending'
-    Running = 'Running'
-    Completed = 'Completed'
-    Failed = 'Failed'
-    Cancelled = 'Cancelled'
+class AgentStepOutput(BaseModel):
+    pass
 
 
-class AgentActionInfo(AgentAction):
-    output: Optional[Dict[str, Any]] = Field(None, description='Output of the action')
-    deliverables: Optional[Dict[str, Any]] = Field(
-        None, description='List of deliverables that the action has produced'
-    )
-    state: State = Field(..., description='The current state of the action')
+class AgentStepResult(AgentTask):
+    output: Optional[AgentStepOutput] = None
+    deliverables: Optional[AgentStepDeliverables] = None
