# agent/python/e2b_agent/routers/actions.py
@@ -1,36 +1,0 @@
-# generated by fastapi-codegen:
-#   filename:  openapi.yml
-#   timestamp: 2023-07-13T03:26:56+00:00
-
-from __future__ import annotations
-from typing import List
-
-from fastapi import APIRouter
-
-from ..dependencies import *
-
-router = APIRouter(tags=['actions'])
-
-
-@router.post('/actions', response_model=None, tags=['actions'])
-def create_agent_action(body: AgentAction) -> None:
-    """
-    Creates a new action for the agent to execute.
-    """
-    pass
-
-
-@router.get('/actions', response_model=List[str], tags=['actions'])
-def list_agent_actions() -> List[str]:
-    """
-    List all actions that have been created for the agent.
-    """
-    pass
-
-
-@router.get('/actions/{action_id}', response_model=AgentActionInfo, tags=['actions'])
-def get_agent_action(action_id: str) -> AgentActionInfo:
-    """
-    Get information about a specific action.
-    """
-    pass
