# agent/python/e2b_agent/routers/state.py
@@ -1,27 +1,0 @@
-# generated by fastapi-codegen:
-#   filename:  openapi.yml
-#   timestamp: 2023-07-13T03:26:56+00:00
-
-from __future__ import annotations
-
-from fastapi import APIRouter
-
-from ..dependencies import *
-
-router = APIRouter(tags=['state'])
-
-
-@router.get('/state', response_model=AgentState, tags=['state'])
-def get_agent_state() -> AgentState:
-    """
-    Get the state of the agent.
-    """
-    pass
-
-
-@router.put('/state', response_model=None, tags=['state'])
-def set_agent_state(body: AgentState) -> None:
-    """
-    Synchronously set the state of the agent.
-    """
-    pass
